@@ -516,6 +516,7 @@
 #define IDC_ZPAGINGPAGEFAULTSDELTA_V    1368
 #define IDC_HIDEFREEREGIONS             1368
 #define IDC_ZPAGINGPAGEREADSDELTA_V     1369
+#define IDC_BYTESPERROW                 1369
 #define IDC_ZPAGINGPAGEFILEWRITESDELTA_V 1370
 #define IDC_ZPAGINGMAPPEDWRITESDELTA_V  1371
 #define IDC_ZLISTMODIFIEDPAGEFILE_V     1373
@@ -726,7 +727,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        206
 #define _APS_NEXT_COMMAND_VALUE         40287
-#define _APS_NEXT_CONTROL_VALUE         1369
+#define _APS_NEXT_CONTROL_VALUE         1370
 #define _APS_NEXT_SYMED_VALUE           169
 #endif
 #endif
